调整项目架构

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 3.27)
 
 project(snake)
-
-# 将静态资源复制到构建目录
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
+# 将静态资源复制到构建目录, CMAKE_SOURCE_DIR指向工程顶层目录，CMAKE_BINARY_DIR指向编译输出层目录
 file(COPY ${CMAKE_SOURCE_DIR}/static DESTINATION ${CMAKE_BINARY_DIR})
 
 # 头文件的路径
 include_directories(
-    ${PROJECT_SOURCE_DIR}/include 
-    ${PROJECT_SOURCE_DIR}/include/easyx 
-    ${PROJECT_SOURCE_DIR}/include/snake
+    ${CMAKE_SOURCE_DIR}/include 
+    ${CMAKE_SOURCE_DIR}/include/easyx 
+    ${CMAKE_SOURCE_DIR}/include/snake
 )
 
 # 设置可执行文件的输出目录
@@ -19,12 +19,17 @@ include_directories(
 set(icon ${CMAKE_BINARY_DIR}/static/favicon.rc)
 
 # 所有源文件
-file(GLOB SRC 
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/snake/*.cpp)
+# file(GLOB SRC 
+#     ${CMAKE_SOURCE_DIR}/src/*.cpp
+#     ${CMAKE_SOURCE_DIR}/src/snake/*.cpp)
+aux_source_directory(src SRC)
+aux_source_directory(src/snake SRC)
 
 # 库文件的路径
-link_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib)
+link_directories(${CMAKE_SOURCE_DIR}/lib)
+
+# 添加编译参数
+add_compile_options(-std=c++11)
 
 # 生成可执行文件
 add_executable(${PROJECT_NAME} ${SRC} ${icon})
