--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.27)
 project(SnakeProject)
-
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/output)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/output)
 file(COPY ${CMAKE_SOURCE_DIR}/static DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
-link_directories(${PROJECT_SOURCE_DIR}/lib)
-add_subdirectory(src)
+link_directories(${CMAKE_SOURCE_DIR}/lib)
 
-add_custom_target(SnakeProject ALL DEPENDS snake)
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libstdc++ -static-libgcc")
+
+add_executable(snake src/Main.cpp src/Game.cpp ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/static/favicon.rc)
+target_link_libraries(snake -static easyx winmm)
